syntax = "proto3";

package umgmt.v1alpha1;

option go_package = "umgmt";

import "google/api/annotations.proto";
import "umgmt/v1alpha1/console.proto";
import "umgmt/v1alpha1/inventory.proto";
import "umgmt/v1alpha1/user.proto";

service UmgmtService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/umgmt/v1alpha1/user"
    };
  }

  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {
    option (google.api.http) = {
      get: "/umgmt/v1alpha1/user/{name}"
    };
  }

  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      post: "/umgmt/v1alpha1/user/{name}"
      body: "*"
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      delete: "/umgmt/v1alpha1/user/{name}"
    };
  }

  rpc ListInventory(ListInventoryRequest) returns (ListInventoryResponse) {
    option (google.api.http) = {
      get: "/umgmt/v1alpha1/inventory"
    };
  }

  rpc GetChassisInfo(GetChassisInfoRequest) returns (GetChassisInfoResponse) {
    option (google.api.http) = {
      get: "/umgmt/v1alpha1/chassis/{id}"
    };
  }

  rpc ChangeSystemState(ChangeSystemStateRequest) returns (ChangeSystemStateResponse) {
    option (google.api.http) = {
      post: "/umgmt/v1alpha1/chassis/{id}/state"
      body: "*"
    };
  }

  rpc StreamConsole(stream StreamConsoleRequest) returns (stream StreamConsoleResponse) {}
}
